--- a/src/componets/Serialization/serialization.css
+++ b/src/componets/Serialization/serialization.css
@@ -8,7 +8,7 @@ ol.serialization {
     height: 100%;
 }
 
-.flex:hover .trash{
+.flex:hover .serialization-icon{
     opacity: 1;
     transition: opacity 0.3s;
 }
@@ -26,7 +26,7 @@ ol.serialization {
 
 .group {
     box-sizing: border-box;
-    border: 1px solid lightpink;
+    /*border: 1px solid lightskyblue;*/
 }
 
 .group ol {
@@ -66,7 +66,7 @@ li {
 
     box-shadow: none;
     height: 24px;
-    font-size: 12px;
+    font-size: 14px;
     border: 1px solid transparent;
     transition: all 0.3s;
     border-radius: 5px;
@@ -87,11 +87,11 @@ li {
 /*    padding-inline: 2px;*/
 /*}*/
 
-.trash {
+.serialization-icon {
     cursor: pointer;
     align-self: center;
     padding-right: 4px;
     margin-left: 4px;
-    width: 20px;
+    width: 22px;
     opacity: 0;
 }
