--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ code {
 .chart {
   align-items: center;
   justify-content: center;
-  /*padding-top: 20px;*/
+  padding-top: 20px;
 }
 
 .fullscreen-enabled {
