--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ code {
 }
 
 .sunburst-chart-block {
-  flex: 1;
+  flex: 2;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -71,4 +71,8 @@ code {
 
 .tooltip span {
   font-weight: 500;
+}
+
+.slider-tooltip {
+
 }
